# Neural-Network-for-energy-optimal-path-planning-of-UAV

./: README.md  data_processing.py  energy-aware-demo.py  energy_aware_trajectory.py  evaluate_model.py  main.py  neural_network_models.py  sim_data_generator.py  spline-demo.py  spline_trajectory_generator.py  traj_main.py  try.py
Cleaned_csv/: Feb4_f01r.csv  Feb4_f02r.csv  Feb4_f05r.csv  Feb4_f06r.csv  Feb4_f07r.csv  Jan24_f05r.csv  Jan27_f02r.csv  Jan27_f03r.csv  Jan27_f04r.csv  Jan27_f05r.csv  Jan27_f07r.csv  Jan29_c01.csv  Jan29_f01r.csv  Jan29_f03r.csv  Jan29_f04r.csv  Jan29_f05r.csv  Jan29_f07r.csv
Dongqi/: 15ut.csv  data_cleaning.py  fully_cleaned_uav_data.csv  processed_uav_data.csv  rank.py  test.py  test_data.csv  train_data.csv
Flight_bag/: get_all_topics.py  transfer_csv.py
Flight_csv/: (former)data_cleanning.py  Feb10_f01r.csv  Feb10_f02r.csv  Feb4_f01r.csv  Feb4_f02r.csv  Feb4_f03r.csv  Feb4_f05r.csv  Feb4_f06r.csv  Feb4_f07r.csv  Jan24_f05r.csv  Jan27_f01r.csv  Jan27_f02r.csv  Jan27_f03r.csv  Jan27_f04r.csv  Jan27_f05r.csv  Jan27_f06r.csv  Jan27_f07r.csv  Jan29_c01.csv  Jan29_f01r.csv  Jan29_f03r.csv  Jan29_f04r.csv  Jan29_f05r.csv  Jan29_f06r.csv  Jan29_f07r.csv  data_clean.py
My_NN/: (former)GRU.py  (train)GRU.py  model_evaluation.py  predict_best_traj.py  test_data_from_trajectories.csv  use_model.py
NN_C_Test/: CMakeLists.txt  README (gary-MNN).md  main.cpp
Test_data/: Jan29_f03r.csv  Jan29_f04r.csv  Jan29_f05r.csv  Jan29_f06r.csv  Jan29_f07r.csv
Train_data/: .~lock.Jan29_c01.csv#  Feb10_f01r.csv  Feb10_f02r.csv  Feb4_f01r.csv  (+9 more)
(+39 files in other folders)
